<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_16sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bg_dialog_comfirm">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/clear_batch"
        android:textAppearance="@style/style_title_dialog_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuestion"
        android:layout_marginTop="@dimen/_8sdp"
        android:textAppearance="@style/style_question_dialog_delete"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_height="wrap_content"
        android:text="@string/Question_when_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:id="@+id/btnYes"
        android:layout_marginTop="@dimen/_32sdp"
        android:paddingTop="@dimen/_3sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/custom_button_blue"
        android:text="@string/yes"
        android:textAppearance="@style/style_text_button"
        app:layout_constraintTop_toBottomOf="@id/tvQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:text="@string/no"
        android:padding="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/btnYes"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/tvNo"
        android:textAppearance="@style/style_no"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>