<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:text="@string/WiFi_Name"
        android:id="@+id/tvWifiName"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/style_item_scan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:hint="@string/Enter_WiFi_Name"
        android:id="@+id/edWifiName"
        android:background="@drawable/custom_bg_scan_result"
        app:layout_constraintTop_toBottomOf="@id/tvWifiName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:text="@string/Create"
        android:id="@+id/btnCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/custom_button_blue"
        android:textAppearance="@style/style_text_button"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>